[package]
name = "api-sec-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
libbpf-rs = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
