[package]
name = "api-sec-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
hpack = "0.3"
indexmap = { version = "1.9.3", features = ["std"] }
libbpf-rs = "0.23"
prost = "0.12"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
tonic = { version = "0.11", features = ["transport"] }
tower = "0.4"

[build-dependencies]
tonic-build = "0.11"
